<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false">

    <RelativeLayout
        android:id="@+id/capture_barcode_input_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/capture_input_back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:scaleType="fitCenter"
            android:src="@drawable/capture_white_back" />


        <ImageView
            android:id="@+id/capture_input_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/captrure_history_ic" />
    </RelativeLayout>

    <TextView
        android:id="@+id/capture_input_barcode_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/capture_barcode_input_title_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/capture_barcode_input_hint"
        android:textColor="@color/encode_view" />

    <EditText
        android:id="@+id/capture_input_barcode_et"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/capture_input_barcode_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/barcode_input_bg"
        android:hint="@string/capture_barcode_text_hint"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="#c7c7cd"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/capture_barcode_input_bottom_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/capture_input_barcode_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/capture_go_scan_barcode"
            android:layout_width="120dp"
            android:layout_height="38dp"
            android:background="@drawable/barcode_input_btn_selector"
            android:drawableLeft="@drawable/capture_barcode_go_scan"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/capture_barcode_go_scan"
            android:gravity="center"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:text="@string/scan_result_bar_code"
            android:textColor="@color/encode_view"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/capture_barcode_input_sure"
            android:layout_width="120dp"
            android:layout_height="38dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/barcode_input_btn_selector"
            android:drawablePadding="4dp"
            android:enabled="false"
            android:gravity="center"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:text="@string/button_ok"
            android:textColor="@drawable/barcode_input_text_color"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>
