<?xml version="1.0" encoding="UTF-8"?><!--
 Copyright (C) 2008 ZXing authors

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <SurfaceView
            android:id="@+id/preview_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <com.google.zxing.client.android.ViewfinderView
            android:id="@+id/viewfinder_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />


        <LinearLayout
            android:id="@+id/result_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/barcode_result_view"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/standard_padding">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="right|center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/barcode_image_view"
                        android:layout_width="160dip"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/half_padding"
                        android:adjustViewBounds="true"
                        android:maxHeight="160dip"
                        android:maxWidth="160dip"
                        android:scaleType="centerInside"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/half_padding"
                            android:paddingRight="@dimen/half_padding"
                            android:text="@string/msg_default_format"
                            android:textColor="@color/result_minor_text"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/format_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/result_minor_text" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/half_padding"
                            android:paddingRight="@dimen/half_padding"
                            android:text="@string/msg_default_type"
                            android:textColor="@color/result_minor_text"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/type_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/result_minor_text" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/half_padding"
                            android:paddingRight="@dimen/half_padding"
                            android:text="@string/msg_default_time"
                            android:textColor="@color/result_minor_text"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/time_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/result_minor_text" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/meta_text_view_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/half_padding"
                            android:paddingRight="@dimen/half_padding"
                            android:text="@string/msg_default_meta"
                            android:textColor="@color/result_minor_text"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/meta_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/result_minor_text" />

                    </LinearLayout>

                </LinearLayout>

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/contents_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="web"
                            android:paddingLeft="12dip"
                            android:paddingStart="12dip"
                            android:textColor="@color/result_text"
                            android:textColorLink="@color/result_text"
                            android:textIsSelectable="true"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/contents_supplement_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="web"
                            android:paddingLeft="12dip"
                            android:paddingStart="12dip"
                            android:textColor="@color/result_text"
                            android:textColorLink="@color/result_text"
                            android:textIsSelectable="true" />

                    </LinearLayout>

                </ScrollView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/result_button_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    style="@style/ResultButton"
                    android:visibility="gone" />

                <Button
                    style="@style/ResultButton"
                    android:visibility="gone" />

                <Button
                    style="@style/ResultButton"
                    android:visibility="gone" />

                <Button
                    style="@style/ResultButton"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/status_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent"
            android:text="@string/msg_default_status"
            android:textColor="@color/status_text"
            android:visibility="gone" />


        <LinearLayout
            android:id="@+id/capture_bottom_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/capture_barcode_input_btn"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:background="@drawable/capture_btn_shape"
                android:drawableLeft="@drawable/capture_barcode_input_btn_left_ic"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/capture_barcode_input_btn_left_ic"
                android:gravity="center"
                android:paddingLeft="16dip"
                android:paddingRight="16dip"
                android:text="@string/scan_result_input_code"
                android:textColor="@color/encode_view"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/capture_right_demo_btn"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/capture_btn_shape"
                android:drawableLeft="@drawable/capture_barcode_right_demo_ic"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/capture_barcode_right_demo_ic"
                android:gravity="center"
                android:paddingLeft="15dip"
                android:paddingRight="15dip"
                android:text="@string/scan_result_right_example"
                android:textColor="@color/encode_view"
                android:textSize="14sp" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:id="@+id/capture_back"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:scaleType="fitCenter"
                android:src="@drawable/capture_white_back" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/capture_light_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/captrure_question_ic_open" />

                <ImageView
                    android:id="@+id/capture_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/captrure_history_ic" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/capture_right_demo_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/barcode_result_view"
            android:baselineAligned="false"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="90dp"
                android:src="@drawable/capture_barcode_right_demo_promt" />

        </RelativeLayout>
    </RelativeLayout>
</merge>
